examples/invalid/semanticErr/declaration/basicTypeErr08.wacc
# type mismatch: char <- bool
# Output:
# #semantic error#

#Program:#

begin
  char c = false
end
